--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node main.js"
+    "start": "nodemon --experimental-modules main.js"
   },
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
+    "nodemon": "^2.0.20",
     "puppeteer": "^19.4.1"
   },
   "type": "module"
