--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
+    "moment": "^2.29.4",
+    "node-fetch": "^3.3.0",
     "nodemon": "^2.0.20",
     "puppeteer": "^19.4.1"
   },
